data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_470.wast
;; 1. **Test Description**: Create a deeply nested loop structure where each loop contains a `br` instruction targeting the next outermost loop. The innermost loop has a condition that should eventually exit all loops. Check for infinite loop behavior if the `br` instructions do not correctly unwind to the outer loops.    **Constraint**: Validates correct label indexing and operand stack unwinding.    **Relation to Infinite Loops**: Misinterpreting label indices may lead to failing to exit loops as expected, resulting in infinite loops.

(assert_invalid
  (module
    (func (loop (loop (loop
      (br 2)
    ))))
  )
  "invalid jump target"
)